2005-08-30  Roland Dreier  <roland@cisco.com>

	* examples/devinfo.c: Merge with Dotan Barak's vstat tool.