@@ -1,0 +1,17 @@
+.\" Copyright (C) 2005 Cisco Systems.
+.TH IBV_ASYNCWATCH 1 "August 30, 2005" "OpenIB" "USER COMMANDS"
+
+.SH NAME
+ibv_asyncwatch \- display asynchronous events
+
+.SH SYNOPSIS
+.B ibv_asyncwatch
+
+.SH DESCRIPTION
+.PP
+Display asynchronous events forwarded to userspace for an InfiniBand device.
+
+.SH AUTHORS
+.TP
+Roland Dreier
+.RI < rolandd@cisco.com >
