@@ -1,0 +1,20 @@
+.\" Copyright (C) 2005 Cisco Systems.
+.TH IBV_DEVICES 1 "August 30, 2005" "OpenIB" "USER COMMANDS"
+
+.SH NAME
+ibv_devices \- list InfiniBand devices
+
+.SH SYNOPSIS
+.B ibv_devices
+
+.SH DESCRIPTION
+.PP
+List InfiniBand devices available for use from userspace.
+
+.SH SEE ALSO
+.BR ibv_devinfo (1)
+
+.SH AUTHORS
+.TP
+Roland Dreier
+.RI < rolandd@cisco.com >
