@@ -1,0 +1,40 @@
+.\" Copyright (C) 2005 Cisco Systems.
+.TH IBV_DEVINFO 1 "August 30, 2005" "OpenIB" "USER COMMANDS"
+
+.SH NAME
+ibv_devinfo \- query InfiniBand devices
+
+.SH SYNOPSIS
+.B ibv_devinfo
+[\-d device] [\-i port] [\-l] [\-v]
+
+.SH DESCRIPTION
+.PP
+Print information about InfiniBand devices available for use from userspace.
+
+.SH OPTIONS
+
+.PP
+.TP
+\fB\-d\fR, \fB\-\-ib\-dev\fR=\fIDEVICE\fR
+use IB device \fIDEVICE\fR (default first device found)
+
+\fB\-i\fR, \fB\-\-ib\-port\fR=\fIPORT\fR
+query port \fIPORT\fR (default all ports)
+
+\fB\-l\fR, \fB\-\-list\fR
+only list names of InfiniBand devices
+
+\fB\-v\fR, \fB\-\-verbose\fR
+print all available information about InfiniBand devices
+
+.SH SEE ALSO
+.BR ibv_devices (1)
+
+.SH AUTHORS
+.TP
+Dotan Barak
+.RI < dotanb@mellanox.co.il >
+.TP
+Roland Dreier
+.RI < rolandd@cisco.com >
